fixed a few issues in javaScript

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <div class="frostedGlass"></div>
   <div class="welcomeDiv">
     <img src="assets/images/Golden_Girls_title.svg" alt="golden girls title">
-    <button class="button" id="playGame">
-      Play Game
-    </button>
+    <button class="button" id="playGame">Play Game</button>
   </div>
   <div class="playerPickerDiv" id="selectionDiv">
     <h1 class="playerPrompt">select player </h1>
@@ -44,26 +42,23 @@
     <div class="gamePlayUser" id="userPlayerDiv"></div>
     <span class="vs"> vs </span>
     <div class="gamePlayOpponent" id="currentOpponentDiv"></div>
-    <button class="button" id="attack">
-      Attack
-    </button>
+    <button class="button" id="attack">Attack</button>
   </div>
 
-<!-- GAME ATTACK DETAILS -->
+  <!-- GAME ATTACK DETAILS -->
   <div class="gameDetails" id="gameDetails">
     <div class="userPlayerReadOut"></div>
     <div class="OpponentReadOut"></div>
   </div>
 
   <!-- WIN LOSE DIV -->
+  <div class="winLoseContainer">
+  </div>
   <div class="winLoseDiv" id="winLose">
     <h2 id="winLoseMessage"></h2>
     <img id="winLoseImg" src="" alt="winning gif">
-    <button class="button" id="newGame">
-    New Game
-    </button>
+    <button class="button" id="newGame">New Game</button>
   </div>
-
   <!-- JavaScript links -->
   <!-- jQuery link -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
